--- a/src/less/components/pagination.less
+++ b/src/less/components/pagination.less
@@ -74,8 +74,15 @@
 /* Items
  ========================================================================== */
 
+/*
+ * 1. Prevent gap if child element is `inline-block`, e.g. an icon
+ * 2. Style
+ */
+
 .uk-pagination > * > * {
-    display: inline-block;
+    /* 1 */
+    display: block;
+    /* 2 */
     color: @pagination-item-color;
     .hook-pagination-item;
 }
